--- a/front/src/components/Reviews/Reviews.module.css
+++ b/front/src/components/Reviews/Reviews.module.css
@@ -6,4 +6,44 @@
 
 .review {
     display: flex;
+    background-color: #fff2f3;
+    min-width: 1249px;
+    margin: 0 0 25px 0;
+    box-shadow: 4px 4px 11px 6px rgb(34 60 80 / 20%);
+    transition: transform 1s;
 }
+.rev_wrp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    .rev_head {
+        color: #b458bf;
+    font-size: 50px;
+    }
+
+    .rev_head_item {
+        display: flex;
+        justify-content: center;
+        color: #7532d5;
+    }
+
+    .rev_name {
+        font-weight: 600;
+        font-style: inherit;
+        display: flex;
+        color: #ec615b;
+        font-size: 20px;
+    }
+
+    .review:hover {
+        transform: scale(1.05);
+        transition: transform 1s;
+    }
+
+    .rev_text {
+        display: flex;
+max-width: 1050px;
+min-width: 1050px;
+font-style: italic;
+    }
