--- a/front/src/components/Reviews/Reviews.module.css
+++ b/front/src/components/Reviews/Reviews.module.css
@@ -1,50 +1,28 @@
 .img_course {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     object-fit: contain;
 }
-
 .review {
     display: flex;
-    background-color: #fafafa;
-    min-width: 1249px;
-    margin: 0 0 25px 0;
-    box-shadow: 4px 4px 11px 6px rgb(34 60 80 / 20%);
-    transition: transform 1s;
-    border-radius: 30px 30px 30px 30px;
+    text-align: start;
 }
-.rev_wrp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
-    .rev_head {
-        color: #b458bf;
+
+.rev_head {
+    color: #b458bf;
     font-size: 50px;
-    }
+}
 
-    .rev_head_item {
-        display: flex;
-        justify-content: center;
-        color: #7532d5;
-    }
+.rev_name {
+    font-weight: 600;
+    font-style: inherit;
+    color: #ec615b;
+    font-size: 20px;
+}
+.rev_text {
+    font-style: italic;
+}
 
-    .rev_name {
-        font-weight: 600;
-        font-style: inherit;
-        display: flex;
-        color: #ec615b;
-        font-size: 20px;
-    }
-
-    .review:hover {
-        transform: scale(1.05);
-        transition: transform 1s;
-    }
-
-    .rev_text {
-        display: flex;
-max-width: 1050px;
-min-width: 1050px;
-font-style: italic;
-    }
+.rev_head_item {
+    color: #7532d5;
+}
