--- a/front/src/components/Lessons/LessonReview/LessonReview.module.css
+++ b/front/src/components/Lessons/LessonReview/LessonReview.module.css
@@ -3,6 +3,7 @@
     height: 100px;
     object-fit: contain;
 }
+
 .review {
     display: flex;
     text-align: start;
@@ -21,6 +22,7 @@
     margin: 0;
     padding-top: 20px;
 }
+
 .rev_text {
     font-style: italic;
     margin: 0;
@@ -28,4 +30,10 @@
 
 .rev_head_item {
     color: #7532d5;
+}
+
+.btn_link {
+    text-decoration: none;
+    margin-bottom: 25px;
+    display: inline-block;
 }
