--- a/front/src/components/common/Slider/Slider.css
+++ b/front/src/components/common/Slider/Slider.css
@@ -10,3 +10,10 @@
     width: 100px;
     
 }
+.btn__wrp {
+    min-width: 150px;
+    max-width: 300px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
