Соединил истории с тестами

--- a/front/src/components/common/Slider/Slider.css
+++ b/front/src/components/common/Slider/Slider.css
@@ -1,3 +1,12 @@
+.slider {
+    min-height: 500px;
+    max-height: 700px;
+    max-width: 1074px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+}
 .slider__img {
     max-width: 500px
 }
@@ -10,17 +19,22 @@
 
 .slider__volue {
     width: 100px;
-
 }
 
 .btn__wrp {
-    min-width: 150px;
-    max-width: 300px;
-    margin: 0 auto;
+    width: 300px;
+    margin-bottom: 2em;
     display: flex;
     justify-content: space-between;
 }
-
+.btn_link {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+.btn_link a{
+    text-decoration: none;
+}
 @media (max-width: 1024px) {
     .slider__img {
         width: 100%;
