--- a/front/src/components/Tests/Tests.css
+++ b/front/src/components/Tests/Tests.css
@@ -1,13 +1,140 @@
+/*Убираем Header и center Footer*/
+.test {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    margin-top: -175px;
+    margin-bottom: -111px;
+    padding: 20px;
+    font-family: 'Balsamiq Sans', cursive;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    z-index: 5;
+}
+
+/*Убираем Header и center Footer*/
+@media screen and (max-width: 460px) {
+    .test {
+        margin-top: -210px;
+    }
+}
+
 .test__correct {
-    /*display: none;*/
     color: #017272;
 }
 
-/*.text__correct {   */
-/*    color: #017272;*/
-/*}*/
-
 .test__error {
-    /*display: none;*/
-    color:darkred;
+    color: darkred;
 }
+
+.test__bottom {
+    margin-top: auto;
+    margin-bottom: 25%;
+}
+
+.test__title {
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: #282c34;
+}
+
+.test__img-wrap {
+    width: 80%;
+    max-width: 300px;
+    height: 250px;
+    margin-bottom: 20px;
+    border: 1px solid #cccccc;
+}
+
+.test__img {
+    width: 100%;
+}
+
+.test__word {
+    font-weight: bold;
+    color: #7532d5;
+}
+
+.test__slider-wrapper {
+    width: 100%;
+}
+
+.test__answers-wrap {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    /*margin-bottom: 30px;*/
+    text-align: left;
+}
+
+.test__sentences-block,
+.test__answers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 90%;
+    min-height: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+    padding: 15px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+}
+
+.test__sentences-word {
+    margin: 5px 7px;
+    padding: 5px 10px;
+    line-height: 1;
+    border: 1px solid rgba(41, 41, 42, 0.54);
+    border-radius: 3px;
+    background-color: #cccccc;
+    cursor: pointer;
+    box-shadow: 1px 2px 0px 2px #5c5c5c;
+    transition: 0.5s;
+}
+
+.test__sentences-word:hover {
+    box-shadow: 1px 1px 1px #cccccc;
+}
+
+.test__sentences-word:active {
+    box-shadow: inset 0px 0px 9px 2px #5c5c5c;
+}
+
+.slick-prev {
+    display: none !important;
+}
+
+.slick-next {
+    font-size: 12px !important;
+    line-height: 1.2 !important;
+    top: 90% !important;
+    right: 20px !important;
+    width: 100px !important;
+    height: 50px !important;
+    color: #212020 !important;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.test__btn {
+    min-width: 64px;
+    margin-bottom: 30px;
+    padding: 6px 16px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
+    letter-spacing: 0.02857em;
+    text-transform: uppercase;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #2e7d32;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    cursor:pointer;
+}
+
+
