--- a/front/src/components/Сourses/Cours.css
+++ b/front/src/components/Сourses/Cours.css
@@ -10,5 +10,8 @@
     margin: 0 auto 30px;
 }
 .cours__btn-wrp {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 30px;
 }
