--- a/front/src/components/InfoPage/InfoPage.css
+++ b/front/src/components/InfoPage/InfoPage.css
@@ -19,7 +19,9 @@
 }
 
 .header-title__react {
-    margin: 0px 440px 103px 0px;
+    width: 100%;
+    width: 600px;
+    margin: 0px 0px 0px 10px;
     justify-content: center;
     /* margin: 0px 15px 0px 15px; */
     margin-bottom: 60px;
@@ -90,6 +92,15 @@
 @media screen and (max-width: 768px) {
     font-size: 27px;
 }
+
+@media screen and (max-width: 768px) {
+   
+    .header-title__react {
+        width: 100%;
+    }
+}
+
+
 @media screen and (max-width: 655px) {
     .header_img {
 
