--- a/front/src/components/Contacts/Contacts.module.css
+++ b/front/src/components/Contacts/Contacts.module.css
@@ -3,7 +3,7 @@
 }
 
 .main {
-  
+
     display: flex;
     justify-content: center;
 }
@@ -122,13 +122,16 @@
 }
 
 .input {
-    opacity: 0.4;
+    opacity: 0.9;
     border: 1px solid #b458bf;
     box-sizing: border-box;
     border-radius: 10px;
     width: 428px;
     height: 72px;
     padding: 10px;
+    font-size: 16px;
+    color: rgb(82, 2, 82);
+    font-weight: 700;
 }
 
 .button_submit {
@@ -155,6 +158,11 @@
     color: #FFFFFF;
 }
 
+.sendedMessage {
+    color: green;
+    font-size: 20px;
+}
+
 @media screen and (max-width: 1330px) {
     .rigth_content {
         margin-left: 120px;
@@ -171,7 +179,7 @@
     .main {
         flex-direction: column;
         align-items: center;
-        
+
     }
 
     .left_content {
